[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/Tiles/Old/IsometricTRPGAssetPack_MapIndicators.png" type="Texture" id=1]
[ext_resource path="res://Scenes/SpellInfo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/EndTurnButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Navigation.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Draw.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Pathfinder.gd" type="Script" id=7]
[ext_resource path="res://Scripts/CombatUI.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Spells_UI_v2.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/radial-gradient.png" type="Texture" id=10]
[ext_resource path="res://Scripts/FloodFill.gd" type="Script" id=11]
[ext_resource path="res://Scenes/ActorIcon.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/MainCamera.gd" type="Script" id=13]
[ext_resource path="res://Assets/GorgeousPixel-BWO85.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Scripts/Actors.gd" type="Script" id=15]
[ext_resource path="res://ui_tileset.tres" type="TileSet" id=16]
[ext_resource path="res://Scripts/Landscape.gd" type="Script" id=17]
[ext_resource path="res://tileset_h0.tres" type="TileSet" id=18]
[ext_resource path="res://tileset_h1.tres" type="TileSet" id=19]
[ext_resource path="res://Theme/health_background.tres" type="Texture" id=20]
[ext_resource path="res://Theme/mp_background.tres" type="Texture" id=21]
[ext_resource path="res://Theme/energy_background.tres" type="Texture" id=22]
[ext_resource path="res://Scenes/TurnDisplayer.tscn" type="PackedScene" id=23]
[ext_resource path="res://Scenes/Spells_FX.tscn" type="PackedScene" id=24]
[ext_resource path="res://Assets/pixel_font_dynamic.tres" type="DynamicFontData" id=25]
[ext_resource path="res://Scenes/BuffButton.tscn" type="PackedScene" id=26]
[ext_resource path="res://Scenes/BuffInfo.tscn" type="PackedScene" id=27]
[ext_resource path="res://Scripts/Spell.gd" type="Script" id=28]

[sub_resource type="TileSet" id=3]
0/name = "IsometricTRPGAssetPack_MapIndicators.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "IsometricTRPGAssetPack_MapIndicators.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "IsometricTRPGAssetPack_MapIndicators.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 8, 16, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "IsometricTRPGAssetPack_MapIndicators.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 16, 8, 16, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "IsometricTRPGAssetPack_MapIndicators.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 16, 16, 8 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "IsometricTRPGAssetPack_MapIndicators.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 16, 16, 16, 8 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=2]
size = 22
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=4]
size = 26
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[node name="Level" type="Node2D"]
z_index = 3
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="." groups=["nav"]]
z_index = 1
mode = 1
tile_set = ExtResource( 18 )
cell_size = Vector2( 16, 8 )
cell_tile_origin = 1
cell_y_sort = true
centered_textures = true
format = 1
script = ExtResource( 5 )

[node name="Landscape" type="TileMap" parent="TileMap" groups=["nav"]]
mode = 1
tile_set = ExtResource( 18 )
cell_size = Vector2( 16, 8 )
cell_tile_origin = 1
cell_y_sort = true
centered_textures = true
format = 1
script = ExtResource( 17 )

[node name="Level1" type="TileMap" parent="TileMap"]
mode = 1
tile_set = ExtResource( 19 )
cell_size = Vector2( 16, 8 )
cell_tile_origin = 1
cell_y_sort = true
centered_textures = true
format = 1

[node name="Actors" type="YSort" parent="."]
script = ExtResource( 15 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 195, 114 )
current = true
zoom = Vector2( 0.38, 0.38 )
limit_left = 0
limit_top = 0
limit_right = 390
limit_bottom = 228
editor_draw_limits = true
script = ExtResource( 13 )

[node name="Draw" type="Node2D" parent="." groups=["draw"]]
z_index = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="Draw"]
mode = 1
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 8 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Pathfinder" type="Node" parent="." groups=["pathfinder"]]
script = ExtResource( 7 )

[node name="FloodFill" type="Node" parent="." groups=["floodfill"]]
script = ExtResource( 11 )

[node name="RayCast2D" type="RayCast2D" parent="." groups=["raycast"]]
visible = false
cast_to = Vector2( 0, 8 )
collide_with_areas = true
__meta__ = {
"_edit_lock_": true
}

[node name="Light_Layer" type="Node2D" parent="."]
visible = false

[node name="Light2D" type="Light2D" parent="Light_Layer"]
position = Vector2( 202, 93 )
scale = Vector2( 1.057, 0.992895 )
texture = ExtResource( 10 )
energy = 1.14
mode = 2

[node name="UI_Layer" type="CanvasLayer" parent="."]
layer = 2
scale = Vector2( 1.6, 1.6 )
transform = Transform2D( 1.6, 0, 0, 1.6, 0, 0 )

[node name="CombatUI" type="Control" parent="UI_Layer"]
margin_left = -26.25
margin_top = -6.875
margin_right = 220.75
margin_bottom = 128.125
rect_scale = Vector2( 2.7, 2.8 )
mouse_filter = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI_TileMap" type="TileMap" parent="UI_Layer/CombatUI"]
scale = Vector2( 0.2, 0.2 )
tile_set = ExtResource( 16 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1114115, 1, 0, 1114116, 1, 1, 1114117, 1, 2, 1114119, 1, 0, 1114120, 1, 524289, 1114121, 1, 2, 1114123, 1, 0, 1114124, 1, 524289, 1114125, 1, 2, 1179650, 1, 0, 1179651, 1, 524290, 1179652, 1, 65537, 1179653, 1, 524288, 1179654, 1, 524289, 1179655, 1, 524290, 1179656, 1, 65537, 1179657, 1, 524288, 1179658, 1, 1, 1179659, 1, 524290, 1179660, 1, 65537, 1179661, 1, 524288, 1179662, 1, 2, 1179663, 6, 0, 1179664, 6, 524289, 1179665, 6, 2, 1179666, 1, 0, 1179667, 1, 524289, 1179668, 1, 1, 1179669, 1, 1, 1179670, 1, 524289, 1179671, 1, 1, 1179672, 1, 1, 1179673, 1, 1, 1179674, 1, 524289, 1179675, 1, 1, 1179676, 1, 524289, 1179677, 1, 1, 1179678, 1, 2, 1245186, 1, 65536, 1245187, 1, 65537, 1245188, 1, 65537, 1245189, 1, 65537, 1245190, 1, 65537, 1245191, 1, 65537, 1245192, 1, 65537, 1245193, 1, 65537, 1245194, 1, 65537, 1245195, 1, 65537, 1245196, 1, 65537, 1245197, 1, 65537, 1245198, 1, 458752, 1245199, 6, 458754, 1245200, 6, 65537, 1245201, 6, 65538, 1245202, 1, 65536, 1245203, 1, 65537, 1245204, 1, 65537, 1245205, 1, 65537, 1245206, 1, 65537, 1245207, 1, 65537, 1245208, 1, 65537, 1245209, 1, 65537, 1245210, 1, 65537, 1245211, 1, 65537, 1245212, 1, 65537, 1245213, 1, 65537, 1245214, 1, 65538, 1245216, 1, 0, 1245217, 1, 524289, 1245218, 1, 1, 1245219, 1, 524289, 1245220, 1, 1, 1245221, 1, 2, 1310722, 1, 131072, 1310723, 1, 131073, 1310724, 1, 131073, 1310725, 1, 393217, 1310726, 1, 393217, 1310727, 1, 131073, 1310728, 1, 393217, 1310729, 1, 393217, 1310730, 1, 131073, 1310731, 1, 393217, 1310732, 1, 131073, 1310733, 1, 131073, 1310734, 1, 131074, 1310735, 6, 131072, 1310736, 6, 393217, 1310737, 6, 131074, 1310738, 1, 131072, 1310739, 1, 131073, 1310740, 1, 393217, 1310741, 1, 131073, 1310742, 1, 393217, 1310743, 1, 393217, 1310744, 1, 393217, 1310745, 1, 393217, 1310746, 1, 131073, 1310747, 1, 393217, 1310748, 1, 131073, 1310749, 1, 393217, 1310750, 1, 131074, 1310752, 1, 131072, 1310753, 1, 393217, 1310754, 1, 393217, 1310755, 1, 131073, 1310756, 1, 131073, 1310757, 1, 131074 )

[node name="Button" type="Button" parent="UI_Layer/CombatUI/UI_TileMap"]
margin_left = 100.0
margin_top = 545.0
margin_right = 190.0
margin_bottom = 578.0
text = "Info"
flat = true

[node name="Button2" type="Button" parent="UI_Layer/CombatUI/UI_TileMap"]
margin_left = 228.009
margin_top = 545.759
margin_right = 318.009
margin_bottom = 578.759
text = "Log"
flat = true

[node name="Button3" type="Button" parent="UI_Layer/CombatUI/UI_TileMap"]
margin_left = 354.167
margin_top = 545.759
margin_right = 444.167
margin_bottom = 578.759
text = "OPtn"
flat = true

[node name="Sprite2" type="Sprite" parent="UI_Layer/CombatUI"]
position = Vector2( 94.213, 113.393 )
scale = Vector2( 0.243963, 0.361607 )
texture = ExtResource( 22 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite3" type="Sprite" parent="UI_Layer/CombatUI"]
modulate = Color( 0.819608, 0.854902, 0.168627, 1 )
position = Vector2( 117.13, 113.393 )
scale = Vector2( 0.243963, 0.361607 )
texture = ExtResource( 21 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="UI_Layer/CombatUI"]
modulate = Color( 0.211765, 0.34902, 0.635294, 0.980392 )
position = Vector2( 105.671, 114.286 )
scale = Vector2( 0.185667, 0.172574 )
texture = ExtResource( 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerStats" type="HBoxContainer" parent="UI_Layer/CombatUI"]
margin_left = 91.2037
margin_top = 110.938
margin_right = 212.204
margin_bottom = 127.938
rect_scale = Vector2( 0.25, 0.25 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 72
__meta__ = {
"_edit_group_": true
}

[node name="MovePoints" type="Label" parent="UI_Layer/CombatUI/PlayerStats"]
margin_right = 24.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "6"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaPoints" type="Label" parent="UI_Layer/CombatUI/PlayerStats"]
margin_left = 96.0
margin_right = 121.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "6"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UI_Layer/CombatUI"]
margin_left = 97.0
margin_top = 111.0
margin_right = 193.0
margin_bottom = 147.0
rect_scale = Vector2( 0.18, 0.18 )
__meta__ = {
"_edit_group_": true
}

[node name="HealthLabel" type="Label" parent="UI_Layer/CombatUI/CenterContainer"]
margin_left = 1.0
margin_top = 4.0
margin_right = 95.0
margin_bottom = 32.0
text = "120/120"

[node name="Spells_UI" type="Control" parent="UI_Layer/CombatUI"]
margin_left = 119.0
margin_top = 119.0
margin_right = 173.0
margin_bottom = 130.0
mouse_filter = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Spells_UI" parent="UI_Layer/CombatUI/Spells_UI" instance=ExtResource( 9 )]
margin_left = -1.0
margin_right = 9.0
margin_bottom = 8.0
rect_scale = Vector2( 0.46, 0.46 )

[node name="SpellInfo" parent="UI_Layer/CombatUI/Spells_UI" groups=["spell_info"] instance=ExtResource( 2 )]
visible = false

[node name="MovementSpell" type="Node" parent="UI_Layer/CombatUI/Spells_UI"]
script = ExtResource( 28 )
spell_ID = "Movement"

[node name="MoveButton" type="Button" parent="UI_Layer/CombatUI"]
margin_left = 176.0
margin_top = 119.0
margin_right = 243.0
margin_bottom = 156.0
rect_scale = Vector2( 0.3, 0.3 )
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
text = "MOVE"

[node name="EndTurnButton" parent="UI_Layer/CombatUI" instance=ExtResource( 3 )]
margin_left = 206.875
margin_top = 123.75
margin_right = 341.875
margin_bottom = 158.75
rect_scale = Vector2( 0.25, 0.25 )
mouse_filter = 1

[node name="ActorIcon" parent="UI_Layer/CombatUI" instance=ExtResource( 12 )]
margin_left = 97.0
margin_top = 118.0
margin_right = 140.0
margin_bottom = 154.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="UI_Layer/CombatUI/ActorIcon"]
margin_left = 1.0
margin_top = -18.0
margin_right = 87.0
margin_bottom = 12.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="TurnDisplayer" parent="UI_Layer/CombatUI" instance=ExtResource( 23 )]
margin_left = 63.1944
margin_top = 3.125
margin_right = 185.194
margin_bottom = 19.125
rect_min_size = Vector2( 80, 16 )
rect_scale = Vector2( 1, 0.95 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tabs" type="Control" parent="UI_Layer/CombatUI"]
margin_left = 14.0
margin_top = 116.0
margin_right = 95.0
margin_bottom = 134.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Tab1" type="Control" parent="UI_Layer/CombatUI/Tabs"]
margin_left = 2.0
margin_top = 1.0
margin_right = 80.0
margin_bottom = 16.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI_Layer/CombatUI/Tabs/Tab1"]
margin_left = -0.953703
margin_top = 0.410706
margin_right = 493.046
margin_bottom = 92.4107
rect_scale = Vector2( 0.16, 0.16 )
custom_constants/separation = 28
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer"]
margin_right = 147.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/VBoxContainer"]
margin_right = 147.0
margin_bottom = 28.0
text = "HP : 120/120"

[node name="Label2" type="Label" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 147.0
margin_bottom = 60.0
text = "EP : 12/12"

[node name="Label3" type="Label" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 147.0
margin_bottom = 92.0
text = "MP : 7/7"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer"]
margin_left = 175.0
margin_right = 465.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/VBoxContainer2"]
margin_right = 290.0
margin_bottom = 28.0
text = "Phy res : x% +y"

[node name="Label2" type="Label" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/VBoxContainer2"]
margin_top = 32.0
margin_right = 290.0
margin_bottom = 60.0
text = "Psy res : x% +y"

[node name="Label3" type="Label" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/VBoxContainer2"]
margin_top = 64.0
margin_right = 290.0
margin_bottom = 92.0
text = "Mag res : x% +y"

[node name="Control" type="Control" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer"]
margin_left = 493.0
margin_right = 493.0
margin_bottom = 92.0

[node name="ScrollContainer" type="ScrollContainer" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/Control"]
margin_left = -95.0
margin_right = -28.0
margin_bottom = 54.0
rect_scale = Vector2( 1.8, 1.8 )
size_flags_horizontal = 3

[node name="BuffsDisplay" type="GridContainer" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/Control/ScrollContainer"]
margin_right = 80.0
margin_bottom = 108.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="BuffButton" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/Control/ScrollContainer/BuffsDisplay" instance=ExtResource( 26 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 24.0
margin_bottom = 24.0

[node name="BuffButton2" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/Control/ScrollContainer/BuffsDisplay" instance=ExtResource( 26 )]
margin_left = 28.0
margin_top = 0.0
margin_right = 52.0
margin_bottom = 24.0

[node name="BuffButton3" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/Control/ScrollContainer/BuffsDisplay" instance=ExtResource( 26 )]
margin_left = 0.0
margin_top = 28.0
margin_right = 24.0
margin_bottom = 52.0

[node name="BuffButton4" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/Control/ScrollContainer/BuffsDisplay" instance=ExtResource( 26 )]
margin_left = 28.0
margin_top = 28.0
margin_right = 52.0
margin_bottom = 52.0

[node name="BuffButton5" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/Control/ScrollContainer/BuffsDisplay" instance=ExtResource( 26 )]
margin_left = 0.0
margin_top = 56.0
margin_right = 24.0
margin_bottom = 80.0

[node name="BuffButton6" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/Control/ScrollContainer/BuffsDisplay" instance=ExtResource( 26 )]
margin_left = 28.0
margin_top = 56.0
margin_right = 52.0
margin_bottom = 80.0

[node name="BuffButton7" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/Control/ScrollContainer/BuffsDisplay" instance=ExtResource( 26 )]
margin_left = 0.0
margin_top = 84.0
margin_right = 24.0
margin_bottom = 108.0

[node name="BuffButton8" parent="UI_Layer/CombatUI/Tabs/Tab1/HBoxContainer/Control/ScrollContainer/BuffsDisplay" instance=ExtResource( 26 )]
margin_left = 28.0
margin_top = 84.0
margin_right = 52.0
margin_bottom = 108.0

[node name="BuffInfo" parent="UI_Layer/CombatUI/Tabs/Tab1" groups=["buff_info"] instance=ExtResource( 27 )]
visible = false
margin_left = 3.90741
margin_top = -27.491
margin_right = 333.685
margin_bottom = 161.989
rect_scale = Vector2( 0.12, 0.12 )

[node name="Tab2" type="Control" parent="UI_Layer/CombatUI/Tabs"]
visible = false
margin_left = 2.0
margin_top = 1.0
margin_right = 80.0
margin_bottom = 17.0

[node name="ScrollContainer" type="ScrollContainer" parent="UI_Layer/CombatUI/Tabs/Tab2"]
margin_right = 77.0
margin_bottom = 15.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="Control" type="Control" parent="UI_Layer/CombatUI/Tabs/Tab2/ScrollContainer"]

[node name="CombatPrinter" type="RichTextLabel" parent="UI_Layer/CombatUI/Tabs/Tab2/ScrollContainer/Control" groups=["combat_printer"]]
margin_right = 515.0
margin_bottom = 102.0
rect_scale = Vector2( 0.15, 0.15 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
scroll_following = true

[node name="Tab3" type="Control" parent="UI_Layer/CombatUI/Tabs"]
visible = false
margin_left = 1.74074
margin_top = 0.741081
margin_right = 79.7407
margin_bottom = 16.7411

[node name="ActorIcon3" parent="UI_Layer/CombatUI/Tabs/Tab3" instance=ExtResource( 12 )]
margin_left = 57.6389
margin_top = 1.33926
margin_right = 104.639
margin_bottom = 38.3393
rect_scale = Vector2( 0.3, 0.3 )

[node name="Spells_FX" parent="." instance=ExtResource( 24 )]

[connection signal="pressed" from="UI_Layer/CombatUI/UI_TileMap/Button" to="UI_Layer/CombatUI" method="_on_Tab1_pressed"]
[connection signal="pressed" from="UI_Layer/CombatUI/UI_TileMap/Button2" to="UI_Layer/CombatUI" method="_on_Tab2_pressed"]
[connection signal="pressed" from="UI_Layer/CombatUI/UI_TileMap/Button3" to="UI_Layer/CombatUI" method="_on_Tab3_pressed"]
